# flash-shapes-game

./: .gitignore  README.md  flashshapes.spec  main.py  pyproject.toml
.github/workflows/: build.yml
assets/icons/: icon.icns
