[project]
name = "FlashShapes"
version = "1.0.0"
description = "A game for training spatial attention and visual memory"
authors = [
    { name = "aDudko", email = "anatoly_dudko@icloud.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame >=2.6.1,<3.0.0",
    "pyinstaller >=6.6.0,<7.0.0",
    "pillow >=10.2.0,<11.0.0"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

